Fix for issue: Read only form label alignment

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -552,6 +552,7 @@ body {
     }
     .form-control-static {
       font-weight: normal;
+      padding: 8px 12px 0 12px
     }
 
     .ng-hide-animate {
